--- a/css/style.css
+++ b/css/style.css
@@ -391,16 +391,639 @@ margin-left: 10px !important;
 	margin-left: 10px;
 	margin-bottom: 20px;
 }
-
 }
 
-@media only screen and (min-width: 768px) and (max-width: 991){
 
+
+@media only screen and (min-width: 768px) and (max-width: 949px){
+	.botonpeya{
+		display: none;
+	}
+	body{
+		overflow-x: hidden;
+		height: 400vh;
+	}
+	.fuentemila {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+	  }
+	
+	
+	.mensajemila{
+		font-size: 7.0rem;
+		position: absolute;
+	  top: 30%;
+	  left: 55%;
+	  transform: translate(-45%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajemila.show{
+		position: absolute;
+		opacity: 1;
+		top: 30%; /* Puedes ajustar la posición de acuerdo a tus preferencias */
+		left: 55%;
+		transform: translateX(-45%, -30%);
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 6.5rem !important;
+		text-shadow: 4px 4px 6px #000000;
+		margin-right: 23px;
+	}
+	.card{
+	margin-left: 130px !important;
+	}
+	#imgamigos{
+		width: 100% !important;
+		height: 60vh;
+		margin-top: 5%;
+	}
+	.contenedoramigos{
+		width: 100%;
+		height: 600px;
+		position: relative;
+	}
+	
+	.mensajeamigos{
+		position: absolute;
+		top: 15%;
+		left: 10%;
+		transform: translateX(-50%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajeamigos.show{
+		position: absolute;
+		opacity: 1;
+		top: 15%;
+		left: 10%;
+		transform: translateX(-50%, -30%);
+	}
+	
+	.fuenteamigos {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+		font-size: 4rem;
+	  }
+	
+	.amigoscaja{
+		width: 100%;
+		height: 70vh;
+	}
+	.franquiciasfont{
+		font-family: 'Roboto', sans-serif;
+		font-size: 2.2rem;
+		margin-left: 40px;
+		margin-bottom: 20px;
+	}
+	#btnmedidas{
+		width: 100%;
+		height: 45px;
+		margin-left: 48px;
+		font-size: 1.5rem !important;
+	}
+	#franquiciaimg{
+		width: 100%;
+		height: 420px !important;
+		margin-top: 10px;
+		margin-left: 10px;
+		margin-bottom: 20px;
+	}
 }
-@media only screen and (min-width: 992px) and (max-width: 1399){
-
+@media only screen and (min-width: 950px) and (max-width: 1023px){
+	.botonpeya{
+		display: none;
+	}
+	body{
+		overflow-x: hidden;
+		height: 410vh;
+	}
+	.fuentemila {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+	  }
+	
+	
+	.mensajemila{
+		font-size: 7.0rem;
+		position: absolute;
+	  top: 30%;
+	  left: 55%;
+	  transform: translate(-45%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajemila.show{
+		position: absolute;
+		opacity: 1;
+		top: 30%; 
+		left: 55%;
+		transform: translateX(-45%, -30%);
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 7rem !important;
+		text-shadow: 4px 4px 6px #000000;
+		margin-right: 23px;
+	}
+	.card{
+	margin-left: 230px !important;
+	}
+	#imgamigos{
+		width: 100% !important;
+		height: 60vh;
+		margin-top: 5%;
+	}
+	.contenedoramigos{
+		width: 100%;
+		height: 600px;
+		position: relative;
+	}
+	
+	.mensajeamigos{
+		position: absolute;
+		top: 25%;
+		left: 15%;
+		transform: translateX(-50%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajeamigos.show{
+		position: absolute;
+		opacity: 1;
+		top: 25%;
+		left: 15%;
+		transform: translateX(-50%, -30%);
+	}
+	
+	.fuenteamigos {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+		font-size: 5rem;
+	  }
+	
+	.amigoscaja{
+		width: 100%;
+		height: 70vh;
+	}
+	.franquiciasfont{
+		font-family: 'Roboto', sans-serif;
+		font-size: 2.2rem;
+		margin-left: 40px;
+		margin-bottom: 20px;
+	}
+	#btnmedidas{
+		width: 100%;
+		height: 50px;
+		margin-left: 48px;
+		font-size: 2rem !important;
+	}
+	#franquiciaimg{
+		width: 100%;
+		height: 520px !important;
+		margin-top: 10px;
+		margin-left: 10px;
+		margin-bottom: 20px;
+	}
 }
-@media only screen and (min-width: 1400px) and (max-width: 1600){
+@media only screen and (min-width: 1024px) and (max-width: 1279px){
+	body{
+		overflow-x: hidden;
+		height: 400vh;
+	}
+	.fuentemila {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+	  }
+	
+	
+	.mensajemila{
+		font-size: 10rem;
+		position: absolute;
+	  top: 30%;
+	  left: 50%;
+	  transform: translate(-45%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajemila.show{
+		position: absolute;
+		opacity: 1;
+		top: 30%; 
+		left: 50%;
+		transform: translateX(-45%, -30%);
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 9rem !important;
+		text-shadow: 4px 4px 6px #000000;
+		margin-right: 23px;
+	}
+	.card{
+	margin-left: 240px !important;
+	}
+	#imgamigos{
+		width: 100% !important;
+		height: 60vh;
+		margin-top: 5%;
+	}
+	.contenedoramigos{
+		width: 100%;
+		height: 600px;
+		position: relative;
+	}
+	
+	.mensajeamigos{
+		position: absolute;
+		top: 20%;
+		left: 15%;
+		transform: translateX(-50%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajeamigos.show{
+		position: absolute;
+		opacity: 1;
+		top: 20%;
+		left: 15%;
+		transform: translateX(-50%, -30%);
+	}
+	
+	.fuenteamigos {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+		font-size: 5.5rem;
+	  }
+	
+	.amigoscaja{
+		width: 100%;
+		height: 70vh;
+	}
+	.franquiciasfont{
+		font-family: 'Roboto', sans-serif;
+		font-size: 2.2rem;
+		margin-left: 40px;
+		margin-bottom: 20px;
+	}
+	#btnmedidas{
+		width: 100%;
+		height: 50px;
+		margin-left: 48px;
+		font-size: 2rem !important;
+	}
+	#franquiciaimg{
+		width: 100%;
+		height: 560px !important;
+		margin-top: 10px;
+		margin-left: 10px;
+		margin-bottom: 20px;
+	}
+}
+@media only screen and (min-width: 1280px) and (max-width: 1359px){
+	body{
+		overflow-x: hidden;
+		height: 405vh;
+		
+	}
+	footer{
+		margin-top: 35px;
+	}
+	.img-main{
+		width: 100%;
+		height: 750px !important;
+	}
+	.fuentemila {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+	  }
+	
+	
+	.mensajemila{
+		font-size: 10rem;
+		position: absolute;
+	  top: 30%;
+	  left: 50%;
+	  transform: translate(-45%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajemila.show{
+		position: absolute;
+		opacity: 1;
+		top: 30%; 
+		left: 50%;
+		transform: translateX(-45%, -30%);
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 9rem !important;
+		text-shadow: 4px 4px 6px #000000;
+		margin-right: 23px;
+	}
+	.card{
+	width: 23rem !important;
+	}
+	#imgamigos{
+		width: 100% !important;
+		height: 85vh;
+		margin-top: 5%;
+	}
+	.contenedoramigos{
+		width: 100%;
+		height: 600px;
+		position: relative;
+	}
+	
+	.mensajeamigos{
+		position: absolute;
+		top: 20%;
+		left: 15%;
+		transform: translateX(-50%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajeamigos.show{
+		position: absolute;
+		opacity: 1;
+		top: 20%;
+		left: 15%;
+		transform: translateX(-50%, -30%);
+	}
+	
+	.fuenteamigos {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+		font-size: 6.2rem;
+	  }
+	
+	.amigoscaja{
+		width: 100%;
+		height: 95vh;
+	}
+	.franquiciasfont{
+		font-family: 'Roboto', sans-serif;
+		font-size: 2.2rem;
+		margin-left: 40px;
+		margin-bottom: 20px;
+	}
+	#btnmedidas{
+		width: 100%;
+		height: 50px;
+		margin-left: 48px;
+		font-size: 2rem !important;
+	}
+	#franquiciaimg{
+		width: 100%;
+		height: 96% !important;
+		margin-top: 10px;
+		margin-left: 10px;
+		margin-bottom: 20px;
+	}
+}
 
+@media only screen and (min-width: 1360px) and (max-width: 1439px){
+	body{
+		overflow-x: hidden;
+		height: 405vh;
+		
+	}
+	footer{
+		margin-top: 35px;
+	}
+	.img-main{
+		width: 100%;
+		height: 750px !important;
+	}
+	.fuentemila {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+	  }
+	
+	
+	.mensajemila{
+		font-size: 10rem;
+		position: absolute;
+	  top: 30%;
+	  left: 50%;
+	  transform: translate(-45%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajemila.show{
+		position: absolute;
+		opacity: 1;
+		top: 30%; 
+		left: 50%;
+		transform: translateX(-45%, -30%);
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 9rem !important;
+		text-shadow: 4px 4px 6px #000000;
+		margin-right: 23px;
+	}
+	.card{
+	width: 23rem !important;
+	}
+	#imgamigos{
+		width: 100% !important;
+		height: 100vh;
+		margin-top: 5%;
+	}
+	.contenedoramigos{
+		width: 100%;
+		height: 600px;
+		position: relative;
+	}
+	
+	.mensajeamigos{
+		position: absolute;
+		top: 15%;
+		left: 15%;
+		transform: translateX(-50%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajeamigos.show{
+		position: absolute;
+		opacity: 1;
+		top: 15%;
+		left: 15%;
+		transform: translateX(-50%, -30%);
+	}
+	
+	.fuenteamigos {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+		font-size: 6.8rem;
+	  }
+	
+	.amigoscaja{
+		width: 100%;
+		height: 115vh;
+	}
+	.franquiciasfont{
+		font-family: 'Roboto', sans-serif;
+		font-size: 2.2rem;
+		margin-left: 40px;
+		margin-bottom: 20px;
+	}
+	#btnmedidas{
+		width: 100%;
+		height: 50px;
+		margin-left: 48px;
+		font-size: 2rem !important;
+	}
+	#franquiciaimg{
+		width: 100%;
+		height: 88% !important;
+		margin-top: 10px;
+		margin-left: 10px;
+		margin-bottom: 20px;
+	}
+}
 
+@media only screen and (min-width: 1440px) and (max-width: 1600px){
+	body{
+		overflow-x: hidden;
+		height: 405vh;
+		
+	}
+	footer{
+		margin-top: 35px;
+	}
+	.img-main{
+		width: 100%;
+		height: 100vh !important;
+	}
+	.fuentemila {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+	  }
+	
+	
+	.mensajemila{
+		font-size: 10rem;
+		position: absolute;
+	  top: 30%;
+	  left: 50%;
+	  transform: translate(-45%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajemila.show{
+		position: absolute;
+		opacity: 1;
+		top: 30%; 
+		left: 50%;
+		transform: translateX(-45%, -30%);
+	}
+	.conocenosfont{
+		font-family: 'Roboto', sans-serif;
+		color: #CA6F1E !important;
+		font-size: 9rem !important;
+		text-shadow: 4px 4px 6px #000000;
+		margin-right: 23px;
+	}
+	.card{
+	width: 26rem !important;
+	}
+	#imgamigos{
+		width: 100% !important;
+		height: 100vh;
+		margin-top: 5%;
+	}
+	.contenedoramigos{
+		width: 100%;
+		height: 600px;
+		position: relative;
+	}
+	
+	.mensajeamigos{
+		position: absolute;
+		top: 20%;
+		left: 15%;
+		transform: translateX(-50%, -30%);
+	  opacity: 0;
+	  transition: opacity 0.8s ease;
+	}
+	
+	.mensajeamigos.show{
+		position: absolute;
+		opacity: 1;
+		top: 20%;
+		left: 15%;
+		transform: translateX(-50%, -30%);
+	}
+	
+	.fuenteamigos {
+		font-family: 'Roboto', sans-serif;
+		font-style: bold;
+		color: #f8f7f6  !important;
+		text-shadow: 6px 6px 8px #000000;
+		font-size: 7.5rem;
+	  }
+	
+	.amigoscaja{
+		width: 100%;
+		height: 115vh;
+	}
+	.franquiciasfont{
+		font-family: 'Roboto', sans-serif;
+		font-size: 2.2rem;
+		margin-left: 40px;
+		margin-bottom: 20px;
+	}
+	#btnmedidas{
+		width: 100%;
+		height: 50px;
+		margin-left: 48px;
+		font-size: 2rem !important;
+	}
+	#franquiciaimg{
+		width: 100%;
+		height: 88% !important;
+		margin-top: 10px;
+		margin-left: 10px;
+		margin-bottom: 20px;
+	}
 }
