--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,13 @@
 	border: none;
 	outline: none;
      box-sizing: border-box;
+
 }
+
+button:focus {
+	outline: none !important;
+	box-shadow: none !important;
+  }
 
 .textdecoration{
 	text-decoration: none;
